--- a/test/test.html
+++ b/test/test.html
@@ -7,6 +7,7 @@
     <title> JavaScript </title>
 </head>
 <body>
+    <h1> Hello JavaScript</h1>
     <ol>
         <li><a href=""> Watch video of vladelin then another guy</a></li>
         <li><a href=""> Follow the instraction </a></li>
@@ -20,6 +21,6 @@
 
 
 
-    <script></script>
+    <script src="/test/test.js"></script>
 </body>
 </html>
