--- a/test/test.html
+++ b/test/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/test/test.css">
     <title> JavaScript </title>
 </head>
 <body>
@@ -12,8 +13,12 @@
         <li><a href=""> Watch video of vladelin then another guy</a></li>
         <li><a href=""> Follow the instraction </a></li>
         <li><a href=""> Project simple from YouTube and then by yourself</a></li>
-        <li><a href=""> </a></li>
-        <li><a href=""> </a></li>
+        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
+        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
+        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
+        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
+        <li><a href=""> wgaat </a></li>
+        <li><a href=""> sdf</a></li>
     </ol>
     
 
