course finished till DOM. Finish DOM and break

--- a/test/test.html
+++ b/test/test.html
@@ -8,24 +8,12 @@
     <title> JavaScript </title>
 </head>
 <body>
-    <h1> Hello JavaScript</h1>
-    <ol>
-        <li><a href=""> Watch video of vladelin then another guy</a></li>
-        <li><a href=""> Follow the instraction </a></li>
-        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
-        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
-        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
-        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
-        <li><a href=""> Project simple from YouTube and then by yourself</a></li>
-        <li><a href=""> wgaat </a></li>
-        <li><a href=""> sdf</a></li>
-    </ol>
-    
+    <h1 id="header"> Hello JavaScript</h1>
 
 
 
 
-
-    <script src="/test/js/test.js"></script>
+    <script src="../test/js/test.js"></script>
+    <script src="../test/js/dom.js"></script>
 </body>
 </html>
