--- a/test/test.html
+++ b/test/test.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1 id="header"> Hello JavaScript</h1>
-
-
+    <h2 id="h2-id" class="h2-class"> This is another header</h2>
+    <h2> Another header 2</h2>
 
 
     <script src="../test/js/test.js"></script>
